--- a/locale/por/LC_MESSAGES/django.po
+++ b/locale/por/LC_MESSAGES/django.po
@@ -12745,10 +12745,8 @@ msgid ""
 msgstr ""
 
 #: corehq/apps/data_interfaces/forms.py
-#, fuzzy
-#| msgid "Date Filter"
 msgid "Cases Filter"
-msgstr "Filtro de Data"
+msgstr ""
 
 #: corehq/apps/data_interfaces/interfaces.py
 msgid "Reassign Cases"
@@ -25397,7 +25395,7 @@ msgstr ""
 #: corehq/apps/registration/templates/registration/partials/choose_your_plan.html
 msgid ""
 "\n"
-"              Get Free Trial\n"
+"              Request Custom Trial\n"
 "            "
 msgstr ""
 
@@ -41490,11 +41488,3 @@ msgstr ""
 #: manage.py
 msgid "Enter valid JSON"
 msgstr ""
-
-#~ msgid "Worker Activity Times"
-#~ msgstr "Horas de Atividade do Trabalhador"
-
-#~ msgid "Graphical representation of when forms are completed or submitted."
-#~ msgstr ""
-#~ "Representação gráfica de quando os formulários são preenchidos ou "
-#~ "submetidos."
