--- a/locale/sw/LC_MESSAGES/django.po
+++ b/locale/sw/LC_MESSAGES/django.po
@@ -12651,10 +12651,8 @@ msgid ""
 msgstr ""
 
 #: corehq/apps/data_interfaces/forms.py
-#, fuzzy
-#| msgid "Add Filter"
 msgid "Cases Filter"
-msgstr "Relatorio Semanal aos Coordinadores do Distrito e os NEDs"
+msgstr ""
 
 #: corehq/apps/data_interfaces/interfaces.py
 msgid "Reassign Cases"
@@ -25217,7 +25215,7 @@ msgstr ""
 #: corehq/apps/registration/templates/registration/partials/choose_your_plan.html
 msgid ""
 "\n"
-"              Get Free Trial\n"
+"              Request Custom Trial\n"
 "            "
 msgstr ""
 
