fix json files related to app manager tests

--- a/corehq/apps/translations/tests/data/bulk_app_translation/basic/app.json
+++ b/corehq/apps/translations/tests/data/bulk_app_translation/basic/app.json
@@ -585,7 +585,7 @@
               }
             },
             "open_case": {
-              "name_path": null,
+              "name_update": null,
               "doc_type": "OpenCaseAction",
               "external_id": null,
               "condition": {
