--- a/corehq/apps/translations/tests/data/bulk_app_translation/download/app.json
+++ b/corehq/apps/translations/tests/data/bulk_app_translation/download/app.json
@@ -190,7 +190,7 @@
               "followup_date": null
             },
             "open_case": {
-              "name_path": null,
+              "name_update": null,
               "doc_type": "OpenCaseAction",
               "external_id": null,
               "condition": {
@@ -555,7 +555,9 @@
               }
             },
             "open_case": {
-              "name_path": "/data/name_of_series",
+              "name_update": {
+                "question_path": "/data/name_of_series"
+              },
               "doc_type": "OpenCaseAction",
               "external_id": null,
               "condition": {
@@ -1018,7 +1020,7 @@
               }
             },
             "open_case": {
-              "name_path": null,
+              "name_update": null,
               "doc_type": "OpenCaseAction",
               "external_id": null,
               "condition": {
@@ -1545,7 +1547,7 @@
               }
             },
             "open_case": {
-              "name_path": null,
+              "name_update": null,
               "doc_type": "OpenCaseAction",
               "external_id": null,
               "condition": {
