--- a/corehq/apps/translations/tests/data/bulk_app_translation/mismatched_ref/app.json
+++ b/corehq/apps/translations/tests/data/bulk_app_translation/mismatched_ref/app.json
@@ -176,7 +176,7 @@
                             "followup_date": null
                         },
                         "open_case": {
-                            "name_path": null,
+                            "name_update": null,
                             "doc_type": "OpenCaseAction",
                             "external_id": null,
                             "condition": {
