--- a/corehq/apps/translations/tests/data/bulk_app_translation/moved_module/app.json
+++ b/corehq/apps/translations/tests/data/bulk_app_translation/moved_module/app.json
@@ -259,7 +259,9 @@
               }
             },
             "open_case": {
-              "name_path": "/data/name_of_series",
+              "name_update": {
+                "question_path": "/data/name_of_series"
+              },
               "doc_type": "OpenCaseAction",
               "external_id": null,
               "condition": {
@@ -611,7 +613,7 @@
               "followup_date": null
             },
             "open_case": {
-              "name_path": null,
+              "namename_updatepath": null,
               "doc_type": "OpenCaseAction",
               "external_id": null,
               "condition": {
@@ -1011,7 +1013,7 @@
               }
             },
             "open_case": {
-              "name_path": null,
+              "name_update": null,
               "doc_type": "OpenCaseAction",
               "external_id": null,
               "condition": {
@@ -1538,7 +1540,7 @@
               }
             },
             "open_case": {
-              "name_path": null,
+              "name_update": null,
               "doc_type": "OpenCaseAction",
               "external_id": null,
               "condition": {
