--- a/locale/es/LC_MESSAGES/djangojs.po
+++ b/locale/es/LC_MESSAGES/djangojs.po
@@ -2789,10 +2789,8 @@ msgid "24-hour clock"
 msgstr ""
 
 #: corehq/apps/cloudcare/static/cloudcare/js/form_entry/entries.js
-#, fuzzy
-#| msgid "Upload"
 msgid "Upload image"
-msgstr "Cargar"
+msgstr ""
 
 #: corehq/apps/cloudcare/static/cloudcare/js/form_entry/entries.js
 msgid "Upload audio file"
@@ -2889,10 +2887,6 @@ msgid "Form submission failed with error"
 msgstr ""
 
 #: corehq/apps/cloudcare/static/cloudcare/js/formplayer/app.js
-msgid "Unexpected Error"
-msgstr ""
-
-#: corehq/apps/cloudcare/static/cloudcare/js/formplayer/app.js
 msgid "Form successfully saved!"
 msgstr ""
 
@@ -2920,9 +2914,13 @@ msgid "Web Apps - CommCare HQ"
 msgstr ""
 
 #: corehq/apps/cloudcare/static/cloudcare/js/formplayer/constants.js
+#, fuzzy
+#| msgid ""
+#| "Formplayer encountered an error. Please report an issue if you continue "
+#| "to see this message."
 msgid ""
-"Formplayer encountered an error. Please report an issue if you continue to "
-"see this message."
+"An unexpected error occurred. Please report an issue if you continue to see "
+"this message."
 msgstr ""
 "El ejecutor del formulario encontró un error. Por favor reporte un problema "
 "si continúa apareciendo este mensaje."
@@ -3027,10 +3025,6 @@ msgstr ""
 #: corehq/apps/cloudcare/static/cloudcare/js/formplayer_inline.js
 msgid "An unexpected error occurred!"
 msgstr ""
-
-#: corehq/apps/cloudcare/static/cloudcare/js/util.js
-msgid "Sorry, an error occurred while processing that request."
-msgstr "Lo sentimos, ocurrió un error al procesar esa solicitud."
 
 #: corehq/apps/cloudcare/static/cloudcare/js/util.js
 msgid "Error saving!"
@@ -4948,3 +4942,6 @@ msgstr "¡Incorrecto! La respuesta es:"
 #: corehq/motech/static/motech/js/connection_settings_detail.js
 msgid "CommCare HQ was unable to make the request: "
 msgstr ""
+
+#~ msgid "Sorry, an error occurred while processing that request."
+#~ msgstr "Lo sentimos, ocurrió un error al procesar esa solicitud."
