--- a/locale/sw/LC_MESSAGES/djangojs.po
+++ b/locale/sw/LC_MESSAGES/djangojs.po
@@ -2752,10 +2752,6 @@ msgid "Form submission failed with error"
 msgstr ""
 
 #: corehq/apps/cloudcare/static/cloudcare/js/formplayer/app.js
-msgid "Unexpected Error"
-msgstr ""
-
-#: corehq/apps/cloudcare/static/cloudcare/js/formplayer/app.js
 msgid "Form successfully saved!"
 msgstr ""
 
@@ -2784,8 +2780,8 @@ msgstr ""
 
 #: corehq/apps/cloudcare/static/cloudcare/js/formplayer/constants.js
 msgid ""
-"Formplayer encountered an error. Please report an issue if you continue to "
-"see this message."
+"An unexpected error occurred. Please report an issue if you continue to see "
+"this message."
 msgstr ""
 
 #: corehq/apps/cloudcare/static/cloudcare/js/formplayer/layout/views/progress_bar.js
@@ -2884,10 +2880,6 @@ msgstr ""
 
 #: corehq/apps/cloudcare/static/cloudcare/js/formplayer_inline.js
 msgid "An unexpected error occurred!"
-msgstr ""
-
-#: corehq/apps/cloudcare/static/cloudcare/js/util.js
-msgid "Sorry, an error occurred while processing that request."
 msgstr ""
 
 #: corehq/apps/cloudcare/static/cloudcare/js/util.js
