fix various app json files

--- a/corehq/apps/translations/tests/data/bulk_app_translation/download/app.json
+++ b/corehq/apps/translations/tests/data/bulk_app_translation/download/app.json
@@ -954,7 +954,9 @@
                 "case_type": "point",
                 "reference_id": null,
                 "repeat_context": null,
-                "case_name": "/data/x",
+                "name_update": {
+                  "question_path": "/data/x"
+                },
                 "condition": {
                   "answer": null,
                   "question": null,
