--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -454,6 +454,7 @@ msgstr "Se requiere un nombre para este nuevo rol."
 #: corehq/messaging/scheduling/templates/scheduling/broadcasts_list.html
 #: corehq/messaging/scheduling/templates/scheduling/conditional_alert_list.html
 #: corehq/messaging/smsbackends/telerivet/forms.py
+#: corehq/motech/generic_inbound/views.py
 #: corehq/motech/repeaters/templates/repeaters/repeaters.html
 #: corehq/motech/views.py custom/abt/reports/late_pmt_2020.py
 msgid "Name"
@@ -1072,6 +1073,7 @@ msgstr ""
 #: corehq/motech/dhis2/templates/dhis2/dataset_map_list.html
 #: corehq/motech/dhis2/templates/dhis2/dataset_map_update.html
 #: corehq/motech/forms.py
+#: corehq/motech/generic_inbound/templates/generic_inbound/api_edit.html
 #: corehq/motech/repeaters/templates/repeaters/partials/repeater_row.html
 #: corehq/motech/templates/motech/connection_settings.html
 msgid "Cancel"
@@ -3001,6 +3003,8 @@ msgstr ""
 #: corehq/messaging/scheduling/forms.py
 #: corehq/messaging/scheduling/templates/scheduling/partials/conditional_alert_save.html
 #: corehq/motech/dhis2/forms.py corehq/motech/forms.py
+#: corehq/motech/generic_inbound/forms.py
+#: corehq/motech/generic_inbound/templates/generic_inbound/api_edit.html
 msgid "Save"
 msgstr "Guardar"
 
@@ -3090,6 +3094,7 @@ msgstr "Razón de \"No Facturar\""
 #: corehq/apps/toggle_ui/templates/toggle/flags.html
 #: corehq/ex-submodules/casexml/apps/case/templates/case/partials/case_hierarchy.html
 #: corehq/motech/dhis2/templates/dhis2/dataset_map_update.html
+#: corehq/motech/generic_inbound/templates/generic_inbound/api_list.html
 #: corehq/motech/repeaters/templates/repeaters/partials/repeater_row.html
 #: corehq/tabs/tabclasses.py
 msgid "Edit"
@@ -6079,6 +6084,7 @@ msgstr "Agenda de Visitas"
 #: corehq/apps/users/templates/users/edit_commcare_user.html
 #: corehq/apps/users/templates/users/roles_and_permissions.html
 #: corehq/apps/users/templates/users/web_users.html
+#: corehq/motech/generic_inbound/views.py
 msgid "Actions"
 msgstr "Acciones"
 
@@ -8924,6 +8930,18 @@ msgid "Label for Searching Again"
 msgstr ""
 
 #: corehq/apps/app_manager/templates/app_manager/partials/modules/case_search_properties.html
+#, fuzzy
+#| msgid "Search Properties"
+msgid "Search Screen Title"
+msgstr "Buscar Propiedades"
+
+#: corehq/apps/app_manager/templates/app_manager/partials/modules/case_search_properties.html
+#, fuzzy
+#| msgid "User Interface Translations"
+msgid "Search Screen Title Translation"
+msgstr "Traducciones de Interfaz del Usuario"
+
+#: corehq/apps/app_manager/templates/app_manager/partials/modules/case_search_properties.html
 msgid "Search Filter"
 msgstr ""
 
@@ -9362,7 +9380,7 @@ msgstr "Reporte"
 #: corehq/apps/userreports/templates/userreports/partials/filter_panel.html
 #: corehq/apps/userreports/templates/userreports/ucr_expression.html
 #: corehq/apps/userreports/views.py corehq/motech/dhis2/forms.py
-#: corehq/motech/dhis2/views.py
+#: corehq/motech/dhis2/views.py corehq/motech/generic_inbound/views.py
 msgid "Description"
 msgstr "Descripción"
 
@@ -20261,8 +20279,10 @@ msgid "Copy of {}"
 msgstr ""
 
 #: corehq/apps/export/views/utils.py
-msgid "Download Data Files"
-msgstr "Descargar Archivos de Datos"
+#, fuzzy
+#| msgid "Cancel Transfer"
+msgid "Secure File Transfer"
+msgstr "Cancelar Transferencia"
 
 #: corehq/apps/export/views/utils.py
 msgid "The data file exceeds the maximum size of {} MB."
@@ -25329,6 +25349,8 @@ msgstr "¡Aquí están sus llaves!"
 #: corehq/apps/notifications/forms.py
 #: corehq/ex-submodules/casexml/apps/case/templates/case/partials/repeat_records.html
 #: corehq/messaging/smsbackends/http/forms.py corehq/motech/forms.py
+#: corehq/motech/generic_inbound/templates/generic_inbound/api_edit.html
+#: corehq/motech/generic_inbound/views.py
 #: corehq/motech/repeaters/views/repeat_records.py corehq/motech/views.py
 msgid "URL"
 msgstr "URL"
@@ -31541,7 +31563,6 @@ msgid "Catch-All Gateway"
 msgstr "Portal General"
 
 #: corehq/apps/sms/forms.py corehq/apps/users/views/__init__.py
-#: corehq/apps/users/views/mobile/users.py
 msgid "(none)"
 msgstr "(ninguno)"
 
@@ -32814,7 +32835,7 @@ msgstr ""
 msgid "Relying Party Settings"
 msgstr ""
 
-#: corehq/apps/sso/forms.py
+#: corehq/apps/sso/forms.py corehq/motech/generic_inbound/forms.py
 msgid "Update Configuration"
 msgstr ""
 
@@ -35952,13 +35973,6 @@ msgstr ""
 
 #: corehq/apps/users/forms.py
 msgid ""
-"<i class=\"fa fa-info-circle\"></i> Only applies to mobile workers who will "
-"be entering data using <a href=\"https://wiki.commcarehq.org/display/"
-"commcarepublic/Web+Apps\">Web Apps</a>"
-msgstr ""
-
-#: corehq/apps/users/forms.py
-msgid ""
 "Multiply this user's case load by this number for load testing on phones."
 msgstr ""
 
@@ -37543,6 +37557,18 @@ msgid "Subscription Info"
 msgstr ""
 
 #: corehq/apps/users/templates/users/roles_and_permissions.html
+#, fuzzy
+#| msgid "Mobile Workers only"
+msgid "Mobile Worker Default Role"
+msgstr "Solo Usuarios Móviles"
+
+#: corehq/apps/users/templates/users/roles_and_permissions.html
+msgid ""
+"This is the default role for all Mobile Workers that do not have a role "
+"assigned."
+msgstr ""
+
+#: corehq/apps/users/templates/users/roles_and_permissions.html
 msgid "Manage All"
 msgstr ""
 
@@ -37725,14 +37751,6 @@ msgid ""
 msgstr ""
 
 #: corehq/apps/users/views/__init__.py
-msgid ""
-"We might be experiencing issues fetching the entire list of user roles right "
-"now. This issue is likely temporary and nothing to worry about, but if you "
-"keep seeing this for more than a day, please <a href='#modalReportIssue' "
-"data-toggle='modal'>Report an Issue</a>."
-msgstr ""
-
-#: corehq/apps/users/views/__init__.py
 msgid "Enterprise Users"
 msgstr ""
 
@@ -37755,6 +37773,14 @@ msgstr ""
 #: corehq/apps/users/views/__init__.py
 msgid "Use Default"
 msgstr "Utilizar el Predeterminado"
+
+#: corehq/apps/users/views/__init__.py
+msgid ""
+"We might be experiencing issues fetching the entire list of user roles right "
+"now. This issue is likely temporary and nothing to worry about, but if you "
+"keep seeing this for more than a day, please <a href='#modalReportIssue' "
+"data-toggle='modal'>Report an Issue</a>."
+msgstr ""
 
 #: corehq/apps/users/views/__init__.py
 msgid ""
@@ -37783,6 +37809,13 @@ msgstr ""
 
 #: corehq/apps/users/views/__init__.py
 msgid "A role with the same name already exists"
+msgstr ""
+
+#: corehq/apps/users/views/__init__.py
+#, python-brace-format
+msgid ""
+"Unable to delete role '{role}'. This role is the default role for Mobile "
+"Users and can not be deleted."
 msgstr ""
 
 #: corehq/apps/users/views/__init__.py
@@ -40801,6 +40834,47 @@ msgstr ""
 msgid "Auth type '{}' requires a username."
 msgstr ""
 
+#: corehq/motech/generic_inbound/forms.py
+#, fuzzy
+#| msgid "Create a new"
+msgid "Create a new API"
+msgstr "Crear uno nuevo"
+
+#: corehq/motech/generic_inbound/templates/generic_inbound/api_edit.html
+#: corehq/motech/generic_inbound/templates/generic_inbound/api_list.html
+#, fuzzy
+#| msgid "Copy"
+msgid "Copy URL"
+msgstr "Copiar"
+
+#: corehq/motech/generic_inbound/utils.py
+msgid "Payload must be valid JSON"
+msgstr ""
+
+#: corehq/motech/generic_inbound/utils.py
+#, fuzzy
+#| msgid "Unknown user"
+msgid "Unknown user type"
+msgstr "Usuario desconocido"
+
+#: corehq/motech/generic_inbound/views.py
+#, fuzzy
+#| msgid "Configuration"
+msgid "Inbound API Configurations"
+msgstr "Configuración"
+
+#: corehq/motech/generic_inbound/views.py
+#, fuzzy
+#| msgid "Configuration"
+msgid "Edit API Configuration"
+msgstr "Configuración"
+
+#: corehq/motech/generic_inbound/views.py
+#, fuzzy
+#| msgid "Location configuration updated successfully"
+msgid "API Configuration updated successfully."
+msgstr "Configuración de ubicación actualizada exitosamente"
+
 #: corehq/motech/models.py
 msgid ""
 "Unable to resolve API endpoints {self.api_auth_settings!r}. Please select "
@@ -42794,3 +42868,6 @@ msgstr ""
 #: manage.py
 msgid "Enter valid JSON"
 msgstr ""
+
+#~ msgid "Download Data Files"
+#~ msgstr "Descargar Archivos de Datos"
