--- a/locale/es/LC_MESSAGES/djangojs.po
+++ b/locale/es/LC_MESSAGES/djangojs.po
@@ -4885,6 +4885,12 @@ msgstr ""
 msgid "Unable to save form configs"
 msgstr ""
 
+#: corehq/motech/generic_inbound/static/generic_inbound/js/api_edit.js
+#, fuzzy
+#| msgid "Copied!"
+msgid "URL Copied"
+msgstr "¡Copiado!"
+
 #: corehq/motech/openmrs/static/openmrs/js/openmrs_importers.js
 msgid "Daily"
 msgstr "Diariamente"
