--- a/locale/fra/LC_MESSAGES/djangojs.po
+++ b/locale/fra/LC_MESSAGES/djangojs.po
@@ -4736,6 +4736,12 @@ msgstr ""
 msgid "Unable to save form configs"
 msgstr ""
 
+#: corehq/motech/generic_inbound/static/generic_inbound/js/api_edit.js
+#, fuzzy
+#| msgid "Copied!"
+msgid "URL Copied"
+msgstr "Copié!"
+
 #: corehq/motech/openmrs/static/openmrs/js/openmrs_importers.js
 msgid "Daily"
 msgstr "Chaque jour"
