--- a/locale/por/LC_MESSAGES/djangojs.po
+++ b/locale/por/LC_MESSAGES/djangojs.po
@@ -147,8 +147,10 @@ msgid "We are sorry, but something unexpected has occurred."
 msgstr ""
 
 #: corehq/apps/analytics/static/analytix/js/hubspot.js
-msgid "Book a Time"
-msgstr ""
+#, fuzzy
+#| msgid "Submit"
+msgid "Submit Request"
+msgstr "Submeter"
 
 #: corehq/apps/analytics/static/analytix/js/hubspot.js
 msgid "Next"
@@ -3695,10 +3697,6 @@ msgstr ""
 
 #: corehq/apps/registration/static/registration/js/password.js
 msgid "Good Job! Your password is strong!"
-msgstr ""
-
-#: corehq/apps/registration/static/registration/js/register_new_user.js
-msgid "Choose a time for your CommCare trial setup"
 msgstr ""
 
 #: corehq/apps/registry/static/registry/js/registry_actions.js
